feat: Implement DC Grid featuring AG Grid, custom cell renderers, and a dedicated API route.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@tanstack/react-query": "latest",
     "@vercel/analytics": "latest",
+    "ag-grid-community": "^35.0.0",
+    "ag-grid-react": "^35.0.0",
     "argon2": "^0.44.0",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.3",
