refactor: remove server-side authentication and database logic
- Deleted README.md and authentication utilities from auth.ts
- Removed database initialization and Sequelize configuration files
- Eliminated password hashing and verification functions
- Cleared out user and delivery challan models and services
- Removed validation schemas and API helper functions
- Cleaned up middleware and index files related to authentication and services

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,32 @@
 # Environment Variables - Backend
 
 # Database Configuration
-# Option 1: Use individual variables (Development)
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=teslead
+# # Option 1: Use individual variables (Development)
+# DB_HOST=localhost
+# DB_PORT=5432
+# DB_USER=postgres
+# DB_PASSWORD=1234
+# DB_NAME=dc
+
+# DB_HOST=db.thuzehgmmthtpzzegkru.supabase.co
+# DB_PORT=5432
+# DB_USER=postgres
+# DB_PASSWORD=12345678
+# DB_NAME=postgres
 
 # Option 2: Use connection string (Production)
-# DATABASE_URL=postgresql://user:password@host:port/database
+# DATABASE_URL=postgresql://postgres.thuzehgmmthtpzzegkru:12345678@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres
 
 # Node Environment
 NODE_ENV=development
 
 # Frontend
-NEXT_PUBLIC_PORT=3012
-NEXT_PUBLIC_API_URL=http://localhost:3011
+# NEXT_PUBLIC_PORT=3012
+# NEXT_PUBLIC_API_URL=http://localhost:3011
 
 # API / Backend
 API_PORT=3011
-API_URL=http://localhost:3011
+NEXT_PUBLIC_API_URL=http://localhost:3011
 
 # JWT
 JWT_SECRET=super_secret_jwt_key_change_in_production
