--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@tanstack/react-query": "latest",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "@vercel/analytics": "latest",
     "ag-grid-community": "^35.0.0",
     "ag-grid-react": "^35.0.0",
