--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "react": "19.2.0",
+    "react-country-state-city": "^1.1.12",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
     "react-grid-layout": "^2.1.1",
