--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@tailwindcss/postcss": "^4.1.9",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
+    "typescript": "^5",
     "react": "19.2.0",
     "react-country-state-city": "^1.1.12",
     "react-day-picker": "9.8.0",
@@ -93,7 +94,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sequelize": "^4.28.20",
-    "tsx": "^4.21.0",
-    "typescript": "^5"
+    "tsx": "^4.21.0"
   }
 }
